<resources>
    <string name="app_name">Que país é esse?</string>
    <string name="nome_aluno">\tLucas Aparecido de Oliveira Marcuzo \n\n 1670482022023</string>
    <string name="pontuacaoPadrao">00</string>
    <string name="acertos">ACERTOS:</string>
    <string name="nomejogador">nomeJogador</string>
    <string name="ranking">Ranking</string>
    <string name="jogarNovamente">Jogar Novamente</string>
    <string name="telaPrincipal">Tela Principal</string>
    <string name="responder">RESPONDER</string>
    <string name="radiobutton">RadioButton</string>
</resources>