<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundo_tela_inicial"
    android:focusable="false"
    tools:context=".Ranking">

    <Button
        android:id="@+id/btn_telaPrincipal"
        android:layout_width="157dp"
        android:layout_height="69dp"
        android:backgroundTint="@color/design_default_color_error"
        android:text="@string/telaPrincipal"
        android:textAllCaps="true"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.893"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_acertos"
        app:layout_constraintVertical_bias="0.454" />

    <Button
        android:id="@+id/btn_jogarNovamente"
        android:layout_width="156dp"
        android:layout_height="69dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:enabled="true"
        android:text="@string/jogarNovamente"
        android:textAllCaps="true"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_telaPrincipal"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_acertos"
        app:layout_constraintVertical_bias="0.454" />

    <EditText
        android:id="@+id/pt_ranking"
        android:layout_width="351dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:enabled="true"
        android:focusable="false"
        android:inputType="textPersonName"
        android:shadowColor="@color/white"
        android:text="@string/ranking"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textColorHint="@color/white"
        android:textColorLink="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.571"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_nomeJogador"
        android:layout_width="267dp"
        android:layout_height="35dp"
        android:layout_marginTop="8dp"
        android:enabled="true"
        android:fontFamily="sans-serif-medium"
        android:text="@string/nomejogador"
        android:textAlignment="textEnd"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.694"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pt_ranking"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_acertos"
        android:layout_width="219dp"
        android:layout_height="47dp"
        android:layout_marginTop="152dp"
        android:layout_marginEnd="40dp"
        android:focusable="false"
        android:freezesText="false"
        android:gravity="center_horizontal"
        android:text="@string/acertos"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_pontuacao"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_nomeJogador"
        app:layout_constraintVertical_bias="0.129" />

    <TextView
        android:id="@+id/tv_pontuacao"
        android:layout_width="122dp"
        android:layout_height="128dp"
        android:background="@drawable/ronded_rectangle"
        android:focusable="false"
        android:freezesText="false"
        android:gravity="center"
        android:text="@string/pontuacaoPadrao"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="90sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.809"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_nomeJogador"
        app:layout_constraintVertical_bias="0.312" />

</androidx.constraintlayout.widget.ConstraintLayout>